--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Set VERSIONs
         run: |
-          [[ "${{ github.ref }}" != "refs/tags/v"* ]] && echo "Expected tag to be of the form v#.#.#-#.#.#-#.#.#-#" && exit 1
+          [[ "${{ github.ref }}" != "refs/tags/v"* ]] && echo "Expected tag to be of the form v#.#.#-#.#.#-#.#.#" && exit 1
           # Strip git ref prefix and leading `v` from version
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/v\(.*\),\1,')
           # Extract Nethermind version
@@ -28,26 +28,22 @@ jobs:
           PUSH_VERSION=$(echo $VERSION | cut -d - -f 2)
           # Extract Multicall version
           MULTICALL_VERSION=$(echo $VERSION | cut -d - -f 3)
-          # Extract this version
-          THIS_VERSION=$(echo $VERSION | cut -d - -f 4)
 
           # ensure we have versions for everything
           [[ $NETHERMIND_VERSION == "" ]] && echo "Nethermind version missing from tag." && exit 1
           [[ $PUSH_VERSION == "" ]] && echo "Push plugin version missing from tag." && exit 1
           [[ $MULTICALL_VERSION == "" ]] && echo "Multicall plugin version missing from tag." && exit 1
-          [[ $THIS_VERSION == "" ]] && echo "The version for this script is missing from tag." && exit 1
 
           echo VERSION=$VERSION >> $GITHUB_ENV
           echo NETHERMIND_VERSION=$NETHERMIND_VERSION >> $GITHUB_ENV
           echo PUSH_VERSION=$PUSH_VERSION >> $GITHUB_ENV
           echo MULTICALL_VERSION=$MULTICALL_VERSION >> $GITHUB_ENV
-          echo THIS_VERSION=$THIS_VERSION >> $GITHUB_ENV
 
       - name: set IMAGE_TAG
         run: echo IMAGE_TAG=ghcr.io/$IMAGE_NAME:$VERSION >> $GITHUB_ENV
 
       - name: Build image
-        run: docker build . --file Dockerfile --build-arg NETHERMIND_VERSION --build-arg PUSH_VERSION --build-arg MULTICALL_VERSION --build-arg THIS_VERSION --tag $IMAGE_TAG
+        run: docker build . --file Dockerfile --build-arg NETHERMIND_VERSION --build-arg PUSH_VERSION --build-arg MULTICALL_VERSION --tag $IMAGE_TAG
 
       - name: Log into registry
         run: echo "${{ secrets.ContainerRegistry }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
